# mia-info-api-poc

./: .gitignore  Cargo.toml  Dockerfile  bacon.toml  compose.yaml  config.alloy  grafana-version-dashboard.json  justfile
.cargo/: config.toml
config/: settings.development.toml  settings.local.toml  settings.production.toml  settings.staging.toml  settings.toml
crates/dev-client/: Cargo.toml
crates/dev-client/src/: main.rs
crates/macros/: Cargo.toml
crates/macros-core/: Cargo.toml
crates/macros-core/src/: lib.rs  mock_helpers.rs  substate.rs
crates/macros-core/tests/: e2e.rs  mock_helpers_e2e.rs  parse_attr.rs  substate_parse_attr.rs
crates/macros-test-utils/: Cargo.toml
crates/macros-test-utils/src/: lib.rs
crates/macros/src/: lib.rs
examples/: badge_imagemagick.rs  badge_imageproc.rs
examples/badge_slint/: Cargo.toml  NOTES.md  README.md
examples/badge_slint/src/: main.rs
src/: error.rs  main.rs  settings.rs  test_utils.rs  utils.rs  web.rs
src/web/: metrics.rs  mod.rs  routes_health.rs  routes_hello.rs  state.rs
src/web/handler/: deployment_handlers.rs  health_handlers.rs  hello_handlers.rs  mod.rs
src/web/models/: deployment_routes.rs  json_response.rs  mod.rs
src/web/route/: deployment_routes.rs  health_routes.rs  hello_routes.rs  mod.rs
src/web/routes/: deployment_routes.rs  health_routes.rs  hello_routes.rs  mod.rs
src/web/service/: badge_service.rs  deployment_service.rs  mod.rs
src/web/state/: deployment_state.rs  mod.rs
