[workspace]
members = ["crates/*", "examples/*"]

[workspace.dependencies]
anyhow = "1.0"
imageproc = { git = "https://github.com/image-rs/imageproc.git", branch = "master" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[package]
name = "mia-info-poc"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
resolver = "3"
license = "MIT OR Apache-2.0"

[features]
listen_public = []

[dependencies]
ab_glyph = "*"
anyhow = { workspace = true }
axum = "0.8"
axum-prometheus = "0.8"
imageproc = { workspace = true }
mime = "*"
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true }
utoipa = { version = "5.3", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

[dev-dependencies]
magick_rust = "1.0"
mockall = "0.13"
rand = "0.9"
