[workspace]
members = ["crates/*", "examples/*"]

[workspace.dependencies]
anyhow = "1.0"
imageproc = { git = "https://github.com/image-rs/imageproc.git", branch = "master" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

[package]
name = "mia-info-poc"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
resolver = "3"
license = "MIT OR Apache-2.0"

[features]

[dependencies]
ab_glyph = "*"
anyhow = { workspace = true }
axum = "0.8"
axum-prometheus = "0.8"
config = { version = "0.15", default-features = false, features = ["convert-case", "toml"] }
imageproc = { workspace = true }
mime = "*"
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true }
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.3", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

[dev-dependencies]
magick_rust = "1.0"
mockall = "0.13"
rand = "0.9"
