[package]
name = "mia-info-poc-macros-core"
version = "0.1.0"
edition = "2024"
description = "core of mia-info-poc-macros"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
case = "1.0"
proc-macro2 = "1.0"
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
mia-info-poc-macros-core-test-utils = { path = "../macros-test-utils" }
