[package]
name = "mia-info-poc-macros"
version = "0.1.0"
edition = "2024"
description = "macros for mia-info-poc"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
mia-info-poc-macros-core = { version = "0.1.0", path = "../macros-core" }
quote = { workspace = true }
syn = { workspace = true }
