[package]
name = "badge-slint"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i-slint-backend-winit = { version = "1.9", features = ["renderer-software"] }
i-slint-core = { version = "1.9", features = ["software-renderer"] }
imageproc = { workspace = true }
# slint = "1.9"
slint = { version = "1.9", features = ["backend-winit", "renderer-software"] }
# slint = { version = "1.9", features = ["backend-winit", "renderer-femtovg"] }

[build-dependencies]
slint-build = "1.9"
